Bug 453497 - Dolphin doesn't show folder preview on local file system until you enter that folder
Summary: Dolphin doesn't show folder preview on local file system until you enter that...
Status: VERIFIED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: Thumbnails and previews (other bugs)
Version First Reported In: 22.04.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-07 12:25 UTC by Nick Stefanov
Modified: 2022-08-24 08:06 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nick Stefanov 2022-05-07 12:25:01 UTC
SUMMARY
***
Dolphin doesn't show folder preview on local file system unless you enter once in the particular folder so the system can read the files. And what interestring is, the prevew is gone on restart and one have to enter again in the folder in order Dolphin to show a preview again.
***


STEPS TO REPRODUCE
1. Put some files in a folder - png, jpeg, exe, etc.

OBSERVED RESULT
There's no folder preview unless you enter once in that folder.

EXPECTED RESULT
There's should be folder preview without the need to enter the particular folder,

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Comment 1 Nate Graham 2022-05-09 17:24:06 UTC
What is the filesystem being used? EXT4 or NTFS or something else?
Comment 2 Nick Stefanov 2022-05-09 19:05:07 UTC
Ah sory - it's ext4 :)
Comment 3 Nate Graham 2022-05-09 19:16:31 UTC
OK, probably not that bug, then. I can reproduce it.
Comment 4 Nick Stefanov 2022-05-09 19:30:58 UTC
It's other bug, yeah :)
Comment 5 Kai Uwe Broulik 2022-05-11 08:57:53 UTC
It's a bug in the thumbnail KIO which creates the directory thumbnails. Loading from cahce works but generation of new ones does not work. This is why the thumbnails start showing up after having entered the directory because the thumbnails are generated properly then.

Bug is in https://invent.kde.org/network/kio-extras/-/blob/master/thumbnail/thumbnail.cpp#L734 where "subPlugin" is the path to the .so file whereas m_enabledPlugins contains a list of IDs, so this check never passes and no thumbnail is generated.
Comment 6 Nick Stefanov 2022-05-11 09:03:23 UTC
Thanks Kai!
Comment 7 Alexander Lohnau 2022-06-07 16:48:17 UTC
Git commit ab2660f22e7692c1bc35d63048704a65f3b5e84d by Alexander Lohnau, on behalf of Martin T. H. Sandsmark.
Committed on 07/06/2022 at 15:51.
Pushed by meven into branch 'master'.

Fix creating thumbnails for folders

Thanks to Kai Uwe Broulik for debugging (which I saw too late, but oh
well).

M  +12   -11   thumbnail/thumbnail.cpp
M  +2    -1    thumbnail/thumbnail.h

https://invent.kde.org/network/kio-extras/commit/ab2660f22e7692c1bc35d63048704a65f3b5e84d
Comment 8 Nick Stefanov 2022-06-07 18:03:49 UTC
Thank you very much!
Comment 9 Mario Awad 2022-06-14 14:11:47 UTC
Thanks for all the hard work on this annoying bug.

I was hoping it would be resolved after today's updates to KDE Plasma 5.25 and KDE Frameworks 5.95 but it's unfortunately not.

On my machine Dolphin behaves just like on Nick's machine with photos. However with videos Dolphin will successfully generate thumbs for them in all subfolders. If you enter a subfolder and then go up again then Dolphin will start displaying thumbs for photos as well only for that folder you have entered.

I tried to reset Dolphin settings to defaults and that didn't work too.

Anything else to be done? Thanks again!

SOFTWARE/OS VERSIONS:
Operating System: KDE neon 5.25
KDE Plasma Version: 5.25.0
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Filesystem: EXT4
Comment 10 Nate Graham 2022-06-14 14:13:56 UTC
The fix is in Dolphin/kio-extras 22.08, which hasn't been released yet.
Comment 11 Mario Awad 2022-06-14 14:19:17 UTC
Glad to hear that the fix is coming and thanks for the quick reply. Sorry I'm new and couldn't find any more info on kio-extras. Would appreciate any links to releases or schedule or code bases for it. Thanks again.
Comment 12 Nate Graham 2022-06-14 14:23:46 UTC
https://invent.kde.org/network/kio-extras

It's got the same release schedule as Dolphin, so assuming you have it installed, you'll get the fix when you upgrade to Dolphin 22.08.
Comment 13 Mario Awad 2022-06-14 14:32:35 UTC
Thanks again for all the info!
Comment 14 Nate Graham 2022-06-14 14:33:32 UTC
You're welcome!
Comment 15 Nick Stefanov 2022-06-14 14:49:43 UTC
(In reply to Nate Graham from comment #12)
> https://invent.kde.org/network/kio-extras
> 
> It's got the same release schedule as Dolphin, so assuming you have it
> installed, you'll get the fix when you upgrade to Dolphin 22.08.

I really can't find any release shedule for Dolphin. Can you give some help?
Comment 16 Nate Graham 2022-06-14 15:08:04 UTC
Dolphin is on the common KDE Gear release schedule used by most KDE apps at this point. See https://community.kde.org/Schedules

22.08 isn't listed there yet, but the numbering gives you a clue as to when it will be released: the 8th month of 2022. So about two months from now.
Comment 17 Nick Stefanov 2022-06-14 17:56:51 UTC
Oh, thank you very much :)
Comment 18 issue137 2022-07-01 16:23:13 UTC
Downgrading kio-extras to version 21.12 in combination with dolphin 22.04 works for me on Fedora 36. Don't forget to add a version-lock.
Comment 19 Nick Stefanov 2022-08-23 20:34:48 UTC
I can confirm that the problem is fixed in Dolphin 22.08!