Fix creating thumbnails for folders

Thanks to Kai Uwe Broulik for debugging (which I saw too late, but oh
well).

BUG: 453497